--- a/style.css
+++ b/style.css
@@ -25,3 +25,8 @@ body{
     display: flex;
     flex-wrap: wrap;
 }
+#score-container{
+    font-size: 30px;
+    margin-top: 10px;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
