--- a/style.css
+++ b/style.css
@@ -14,7 +14,6 @@ body{
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 20%
 }
 
 #game-container{
@@ -29,4 +28,20 @@ body{
     font-size: 30px;
     margin-top: 10px;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+
+#moves-container{
+    font-size: 30px;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    display: flex;
+    margin: 20px;
+}
+
+.container{
+ display: flex; 
+ gap: 20%;
+}
+
+#target{
+    margin-left: 25px;
 }
