ui and logic upated

--- a/style.css
+++ b/style.css
@@ -1,4 +1,6 @@
-
+:root {
+    --grid-size: 450px;
+}
 html, body {
     height: 100%;
     margin: 0;
@@ -17,31 +19,48 @@ body{
 }
 
 #game-container{
-    height: 450px;
-    width: 450px;
+    height: var(--grid-size);
+    width: var(--grid-size);
     border: 4px solid black;
     background-color: rgba(94, 128, 167,0.8);
-    display: flex;
-    flex-wrap: wrap;
+    display: grid;
+    grid-template-rows: repeat(9, 1fr);
+    grid-template-columns: repeat(9,1fr);
+    overflow: hidden;
 }
-#score-container{
+/* #score-container{
     font-size: 30px;
     margin-top: 10px;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-}
-
-#moves-container{
-    font-size: 30px;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+} */
+#target-container{
     display: flex;
-    margin: 20px;
+    
+}
+#st{
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    font-size: 30px;
+    margin-top: 10px; 
+    font-family: "Dancing Script", cursive;
+    font-optical-sizing: auto;
+    font-weight: 900;
+    color: black;
+    margin-bottom: 20px;
+    gap: 10px;
+}
+.sound{
+    display: none;
 }
 
-.container{
- display: flex; 
- gap: 20%;
+@media (max-width: 600px) {
+    :root {
+        --grid-size: 350px;
+    }
 }
-
-#target{
-    margin-left: 25px;
+@media (max-width: 360px) {
+    :root {
+        --grid-size: 300px;
+    }
 }
